fix: configuration des modules ES pour Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -21,5 +21,11 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "nodejs18.x",
+      "includeFiles": "api/**/*.ts"
+    }
+  }
 } 
