--- a/vercel.json
+++ b/vercel.json
@@ -22,10 +22,10 @@
       ]
     }
   ],
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs18.x",
-      "includeFiles": "api/**/*.ts"
+  "builds": [
+    {
+      "src": "api/**/*.ts",
+      "use": "@vercel/node@2.15.8"
     }
-  }
+  ]
 } 
