fix: spécification de la version Node.js 18.x pour Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" }
   ],
@@ -25,7 +26,10 @@
   "builds": [
     {
       "src": "api/**/*.ts",
-      "use": "@vercel/node@2.15.8"
+      "use": "@vercel/node@2.15.8",
+      "config": {
+        "nodeVersion": "18.x"
+      }
     }
   ]
 } 
