fix: ajout de la configuration de build pour Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -25,6 +25,13 @@
   ],
   "builds": [
     {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    },
+    {
       "src": "api/**/*.ts",
       "use": "@vercel/node@2.15.8",
       "config": {
