--- a/vercel.json
+++ b/vercel.json
@@ -34,10 +34,7 @@
     },
     {
       "src": "api/**/*.ts",
-      "use": "@vercel/node@2.15.8",
-      "config": {
-        "nodeVersion": "18.x"
-      }
+      "use": "@vercel/node@2.15.8"
     }
   ]
 } 
