--- a/vercel.json
+++ b/vercel.json
@@ -36,5 +36,8 @@
       "src": "api/**/*.ts",
       "use": "@vercel/node@2.15.8"
     }
-  ]
+  ],
+  "env": {
+    "NODE_VERSION": "18.x"
+  }
 } 
