--- a/package.json
+++ b/package.json
@@ -44,11 +44,14 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
     "@vercel/node": "^5.2.1",
+    "body-parser": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.3.0",
+    "express": "^5.1.0",
     "googleapis": "^150.0.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
