fix(vercel): ajout du fallback SPA pour le routing client-side

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "version": 2,
   "rewrites": [
     { "source": "/api/newsletter", "destination": "/api/newsletter.cjs" },
-    { "source": "/api/partenariat", "destination": "/api/partenariat.cjs" }
+    { "source": "/api/partenariat", "destination": "/api/partenariat.cjs" },
+    { "source": "/((?!api|assets).*)", "destination": "/" }
   ],
   "headers": [
     {
