fix(vercel): ajoute les rewrites pour les endpoints Notion .cjs

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,8 @@
   "rewrites": [
     { "source": "/api/newsletter", "destination": "/api/newsletter.cjs" },
     { "source": "/api/partenariat", "destination": "/api/partenariat.cjs" },
+    { "source": "/api/notion-articles", "destination": "/api/notion-articles.cjs" },
+    { "source": "/api/notion-article", "destination": "/api/notion-article.cjs" },
     { "source": "/((?!api|assets).*)", "destination": "/" }
   ],
   "headers": [
