Mise à jour du cron job pour exécution quotidienne dans vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -70,7 +70,7 @@
   "crons": [
     {
       "path": "/api/cron-articles",
-      "schedule": "@daily"
+      "schedule": "0 3 * * *"
     }
   ]
 } 
