--- a/vercel.json
+++ b/vercel.json
@@ -71,6 +71,10 @@
     {
       "path": "/api/cron-articles",
       "schedule": "0 3 * * *"
+    },
+    {
+      "path": "/api/cron-articles-details",
+      "schedule": "15 3 * * *"
     }
   ]
 } 
